
**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 2.0.1                               *
*	LAST UPDATE: Aug 19 2016                     *
*                                                *
**************************************************

Update: August 23 2016
==================================================
->Added method AnalyzeResponseUniformityHits::findDeadStrips(), produces a text file including tabular data of dead strips in eta/phi
->Added function QualityControl::Uniformity::getPhiStripNum() for converting strip number in iEta row to iPhi sector
->Added function QualityControl::Uniformity::getPhiSectorVal() for determining which phi sector an iEta strip is in
->Added overloaded function QualityControl::Timing::printStreamStatus() for dealing with std::fstream objects
->Changed InterfaceAnalysis::storeResults to take 2 arguments, the second being the file name of the input TFile
->InterfaceAnalysis::storeResults will now call AnalyzeResponseUniformityHits::findDeadStrips()

Update: August 19th 2016
==================================================
->Fixed an error in VisualizeUniformity where iphi was drawn in the wrong order on the summary canvases

Update: August 18th 2016
==================================================
->Changed the mapping files, config/Mapping_GE11-VII-S.cfg and config/Mapping_GE11-VII-L.cfg, to have the width & height matching the CMS Geometry
->Note the CMS Geometry for GE1/1 is found in table 2 of https://twiki.cern.ch/twiki/bin/viewauth/CMS/GEMGeometryStatusNew#GE_1_1_Global_Position

Update: July 7th 2016
==================================================
->Removed InterfaceRun workflow, class still exists but is no longer used
->Added std::map<int, std::shared_ptr<TH2F> > map_hADC_v_EvtNum_by_Run to QualityControl::Uniformity::HistosPhysObj; here key is a run number and the value is the histogram
